<resources>
    <string name="app_name" translatable="false">Monitor Robot</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_delete_monitor">Delete Monitor</string>
    <string name="no_connection">No Connection</string>
    <string name="nav_about">About</string>
    <string name="nav_settings">Settings</string>
    <string name="title_item_detail">Monitor Details</string>

    <!--Setup-->
    <string name="api_key">API Key</string>
    <string name="api_required">API Key is required</string>
    <string name="api_fail">API Key is wrong</string>
    <string name="about_api_key">Downtime happens. Know what actions to take!</string>
    <string name="setup_action">continue</string>
    <string name="where">For the API key you will need an Uptime Robot account. https://uptime.com</string>
    <string name="uptime_url" translatable="false">https://uptimerobot.com/</string>

    <string name="percent" translatable="false">%1$s %%</string>

    <!--Settings-->
    <string name="content_authority" translatable="false">co.rytikov.monitorrobot</string>
    <string name="sync_account_type" translatable="false">monitorrobot.rytikov.co</string>

    <!--Dialog Monitor-->
    <string-array name="monitor_type">
        <item>HTTP(s)</item>
        <item>Ping</item>
        <item>Port</item>
    </string-array>
    <string name="add_monitor_title">Add New Monitor</string>
    <string name="create_monitor">Create Monitor</string>
    <string name="cancel">Cancel</string>
    <string name="friendly_name">Friendly Name</string>
    <string name="url_or_ip">URL (or IP)</string>
    <string name="ip_or_host">IP (or Host)</string>
    <string name="ip_or_url_or_host">IP (or URL or Host)</string>
    <string name="port">Port</string>
    <string name="five_minutes">5</string>
    <string name="minutes">minutes</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Settings -->
    <string name="pref_default_api">-</string>
    <string name="pref_title_api">API Key</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string name="no_data">No response time data.</string>
    <string name="response_time">Response Time</string>
    <string-array name="pref_sync_frequency_titles">
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>60</item>
        <item>180</item>
        <item>360</item>
    </string-array>
    <string name="title_activity_about">AboutActivity</string>

    <string name="about_the_app">The app is based on Uptime Robot API you can find more information about the API here http://uptimerobot.com/api. The app is third party resource for viewing you Uptime Robot account. The app is not responsible for anything. Use at your own risk.

Monitor Robot app is Open Source if you found any issues you can report them at GitHub. https://github.com/tikot/MonitorRobot</string>

    <string name="cd_tv_about">Information about the app</string>
    <string name="cp_b_continue">Button continue to the app</string>
    <string name="cd_fab_new">Create new monitor</string>
    <string name="cp_s_type">Select type of monitor</string>
    <string name="cp_tiet_name">Friendly name for monitor</string>
    <string name="cp_tiet_url">Url or IP to monitor</string>
    <string name="cp_tiet_port">Port if monitor type set to port</string>
    <string name="cp_tiet_interval">Interval in minutes</string>
    <string name="cp_sb_slider">Slider to select interval minutes</string>
    <string name="cp_cv_respon">CordView showing response time chart</string>

    <string name="add_widget">Add widget</string>
    <string name="down_monitors">DOWN</string>
    <string name="up_monitors">UP</string>
    <string name="monitors">MONITORS</string>

</resources>
