<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/item_detail"
    style="?android:attr/textAppearanceLarge"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textIsSelectable="true"
    tools:context="co.rytikov.monitorrobot.ui.MonitorDetailFragment"
    android:orientation="vertical">

    <TextView
        android:id="@+id/no_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/material_padding"
        android:layout_gravity="center"
        android:textAlignment="center"
        style="@style/TextAppearance.AppCompat.Headline"
        android:text="@string/no_data" />

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/chart_card"
        android:layout_width="match_parent"
        android:layout_height="@dimen/card_view"
        android:layout_margin="@dimen/material_padding"
        android:visibility="gone"
        android:contentDescription="@string/cp_cv_respon"
        card_view:cardBackgroundColor="@color/primaryDark">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/response_time"
                android:textSize="@dimen/card_title"
                android:textColor="@color/primaryLight"
                android:layout_centerHorizontal="true" />

            <com.db.chart.view.LineChartView
                xmlns:chart="http://schemas.android.com/apk/res-auto"
                android:id="@+id/response_chart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/log_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:scrollbarStyle="outsideOverlay"
        app:layoutManager="LinearLayoutManager"
        tools:listitem="@layout/monitor_log_item" />

</LinearLayout>